# ChangeLog for games-server/tpserver-cpp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tpserver-cpp-0.6.1 (25 Mar 2009)

  25 Mar 2009; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.6.1.ebuild:
  New version

*tpserver-cpp-0.6.0 (12 Jan 2008)

  12 Jan 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.6.0.ebuild:
  New version

  04 Dec 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.1.ebuild:
  Changed dev-scheme/drscheme to dev-scheme/plt-scheme in depends

  30 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-9999.ebuild:
  Added development version from git

  27 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.1.ebuild:
  Stabilized all release versions

*tpserver-cpp-0.5.1 (30 Jun 2008)

  30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.1.ebuild:
  New version

  30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.0.ebuild:
  Added Boost dependency and use games eclass

*tpserver-cpp-0.5.0 (01 May 2008)

  01 May 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.0.ebuild:
  New version

  21 Apr 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.4.1.ebuild:
  Added ~sparc

*tpserver-cpp-0.4.1 (24 Mar 2008)

  24 Mar 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.4.1.ebuild: 
  Initial import